Fix filter, modal pop-up, and sequence wrapping
- Fixed modal bug: modals used to show only first element's data, now
  they show data belonging to the right element
- Made sequences wrap in modals instead of being an infinite line
- Filters are now case insensitive

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,1 +1,13 @@
 @import '~bootstrap/scss/bootstrap';
+
+.full-sequence {
+  word-wrap: break-word;
+}
+
+.sequence-link {
+  text-decoration: underline;
+  &:hover {
+    text-decoration: none;
+    cursor: pointer;
+  }
+}
